--- a/site/docs/release-notes/3-15.md
+++ b/site/docs/release-notes/3-15.md
@@ -16,4 +16,15 @@ The notes will be updated until & when 3.15 is released**_
     * The [*DigitalServiceOperator*](/types/7/0715-Digital-Service-Ownership) can now be any *Referenceable* rather than being restricted to a *Team*.
     * The [*SolutionLinkingWire*](/types/7/0735-Solution-Ports-and-Wires) relationship can link any *Referenceable* rather than being restricted to a *SolutionPort*.  This means that solution ports can be wired to [DigitalProducts](/types/7/0710-Digital-Service) and other artifacts that they interact with.
 
+??? functional "Change in unique attribute checking for OMAS entity creation" 
+
+     The generic handler is used by OMAS's to perform common tasks. One of those tasks is to create an Entity bean.
+     As part of this bean creation, the code checks that unique values are unique by searching for existing entities of the 
+     type of the bean to be created. The code has been changed in this area to check Entities using the type where the
+     unique attribute is defined (i.e. potentially a super type).
+     For example if a [GlossaryTerm](/types/3/0330-Terms/) entity is being created, instead of checking that the [qualifiedName](/parameters/qualified-name) is unique within 
+     all entities with type [GlossaryTerm](/types/3/0330-Terms/), it now checks that the [qualifiedName](/parameters/qualified-name) is unique within all entities with type 
+     [Referencable](/types/0/0010-Base-Model/#referenceable)  
+
+
 --8<-- "snippets/abbr.md"
