--- a/site/docs/release-notes/4-0.md
+++ b/site/docs/release-notes/4-0.md
@@ -6,15 +6,28 @@
 _**These are DRAFT release notes, initially copied from the previous release
 The notes will be updated until & when 4.0 is released**_
 
+!!! danger "Special note on Java support"
+    Java 17 is now **required** to build and run Egeria.  The build is now driven by Gradle.
+
+!!! danger "Repository Connector Authors - Note change in InstanceType"
+    A number of fields have been removed from the Open Metadata Repository Services (OMRS)'s InstanceType in order to improve the marshalling/unmarshalling performance of open metadata instances.  If your connector has its own methods for populating this element then please amend to remove these obsolete fields.
+    ![OpenMetadata Instance Structure](/concepts/open-metadata-instances-structure.svg)
+
 ??? functional "Open Metadata Types"
-    * New attributes have been added to the [*CollectionMembership*](/types/0/0021-Collections) relationship type to allow the confidence and provenance of a member's inclusion in the collection to be documented.  This is important where collections are being generated from automated processes.
+    * New attributes have been added to the [*CollectionMembership*](/types/0/0021-Collections) relationship type to allow the confidence and provenance of a member's inclusion in the collection to be documented.  This is used where collections are being generated from automated processes.
     * New attributes have been added to the [*ActionTarget*](/types/1/0137-Actions) relationship type to allow the status of each element to be acted upon to be managed.  This is important where the actor has to perform work on multiple elements since it allows progress to be recorded.
     * A new DataSet entity type called [*DataFileCollection*](/types/2/0220-Files-and-Folders) has been added to capture an asset that is a collection of files, not necessarily co-located.
-    * A new DataSet entity type called [*TableDataSet*](/types/2/0224-Databases) has been added to capture an asset that is a database table.  This is useful for database tables in a large database that containse useful reference values.
+    * A new DataSet entity type called [*TableDataSet*](/types/2/0224-Databases) has been added to capture an asset that is a database table.  This is useful for database tables in a large database that contains useful reference values.
     * A new Asset entity type called [*DeployedReportType*](/types/2/0239-Reports) has been added to capture an asset that is a report template.
     * New attributes have been added to the [*GovernanceActionTypeExecutor*](/types/4/0462-Governance-Action-Types) relationship type to allow the filtering and mapping of request parameters and action targets before calling a governance action.
-    * A new attribute called *incidentClassifierCategory* has been added to the [*incidentClassifierSet*](/types/4/0470-Incident-Reporting) classification type to allow different names classifiers to be defined.
+    * A new attribute called *incidentClassifierCategory* has been added to the [*IncidentClassifierSet*](/types/4/0470-Incident-Reporting) classification type to allow different names classifiers to be defined.
     * The [*AgreementActor*](/type/4/0484-Agreements) relationship is now multi-link.
     * A new relationship called [*InformationSupplyChainLink*](/types/7/0720-Information-Supply-Chains) has been added to show the relationships between the information supply chain segments and the logical sources and destinations of an information supply chain.
+    * Entity types *IntegrationGroup* and *IntegrationConnector* plus new relationship types *RegisteredIntegrationConnector* and *CatalogTarget* are featured in a new model [0464](/types/4/0464-Dynamic-Integration-Groups).
+
+??? functional "Integration Groups"
+    * In this release we have added the ability to dynamically configure an [integration daemon](/concepts/integration-daemon) using [integration groups](/concepts/integration-group).  This enables new integration connectors to be deployed to the integration daemon without needing to restart it.
+
+
 
 --8<-- "snippets/abbr.md"
